--- a/client/src/components/views/MainPage/MainPage.css
+++ b/client/src/components/views/MainPage/MainPage.css
@@ -1,3 +1,13 @@
 .ant-row {
 	margin-top: 5rem;
+	margin-right: 0 !important;
+	margin-left: 0 !important;
+}
+
+.ant-col:first-child {
+	padding-left: 0 !important;
+}
+
+.ant-col:last-child {
+	padding-right: 0 !important;
 }
